--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Reminders</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="new_reminders" >Settings</string>
-
+    <string name="new_reminders">Settings</string>
+    <string name="title_activity_maps">MapsActivity</string>
 
 </resources>
