--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,16 @@
 <resources>
 
     <string name="app_name">Reminders</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="TODO">TODO : </string>
+    <string name="Notes">Notes : </string>
+    <string name="Time">Date-Time : </string>
+
+    <string name="Location">Location : </string>
+
+    <string name="blank"></string>
     <string name="action_settings">Settings</string>
     <string name="new_reminders">Settings</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_show_reminder">ShowReminder</string>
 
 </resources>
