--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,14 @@
     <string name="TODO">TODO : </string>
     <string name="Notes">Notes : </string>
     <string name="Time">Date-Time : </string>
-
     <string name="Location">Location : </string>
-
     <string name="blank"></string>
     <string name="action_settings">Settings</string>
     <string name="new_reminders">Settings</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="title_activity_show_reminder">ShowReminder</string>
+    <string name="title_activity_launch_page">LaunchPage</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_preferences">Preferences</string>
 
 </resources>
